--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "laravelcollective/html": "^6.3"
+        "laravelcollective/html": ">=6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": ">=6.0"
     }
 }
