--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,6 @@
     "version": "0.0.1",
     "homepage": "https://github.com/han48/mr4-lc.select-birthday",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Mr4Lc\\SelectBirthday\\": "src/"
-        }
-    },
     "authors": [
         {
             "name": "Mr4",
@@ -23,5 +18,17 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mr4Lc\\SelectBirthday\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Mr4Lc\\SelectBirthday\\SelectBirthdayServiceProvider"
+            ]
+        }
     }
 }
